--- a/Spotify_frontend/index.html
+++ b/Spotify_frontend/index.html
@@ -44,6 +44,19 @@
                         <span class="fa fas fa-book"></span>
                         <span>Your Library</span>
                     </a>
+                    <div class="dropdown">
+                        <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+                        <div id="myDropdown" class="dropdown-content">
+                          <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
+                          <a href="#about">About</a>
+                          <a href="#base">Base</a>
+                          <a href="#blog">Blog</a>
+                          <a href="#contact">Contact</a>
+                          <a href="#custom">Custom</a>
+                          <a href="#support">Support</a>
+                          <a href="#tools">Tools</a>
+                        </div>
+                      </div>
                 </li>
             </ul>
         </div>
